--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,5 @@
             "username": "mehdi"
         }
     ],
-    "python.pythonPath": "/usr/bin/python3.7"
+    "python.pythonPath": "C:\\Users\\DANSO\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
 }
